# pacm

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
development/: PROJECT_INFO.md
example/: package.json  pacm-lock.json
example/github/: package.json  pacm.lockb
example/pacm/: index.js  package.json  pacm-lock.json  pacm-lock.readable.json  pacm.lockb
example/pnpm/: package.json  pnpm-lock.yaml
example/workspaces/: package.json  pacm.lockb
schema/: lockfile.json
src/: cli.rs  colors.rs  error.rs  fsutil.rs  lib.rs  lockfile.rs  main.rs  manifest.rs  shim.rs  workspaces.rs
src/cache/: mod.rs
src/cli/: install.rs  mod.rs  remove.rs  util.rs
src/cli/commands/: cache.rs  init.rs  install.rs  list.rs  mod.rs  pm.rs  remove.rs  run.rs  scripts.rs
src/cli/commands/install/: download.rs  fast.rs  install_command.rs  manifest_updates.rs  node_modules.rs  platform.rs  progress.rs  prune.rs  util.rs
src/fetch/: mod.rs
src/installer/: mod.rs
src/linker/: mod.rs
src/resolver/: mod.rs  spec.rs
src/store/: mod.rs
src/tests/: cache_integrity.rs  cas_store.rs  common.rs  fast_install.rs  install_command.rs  lockfile.rs  manifest.rs  manifest_updates.rs  mod.rs  resolver.rs  run.rs  workspaces.rs
testings/: lockfile.rs
tests/: lockfile.rs  manifest.rs
