[package]
name = "pacm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fast, disk-efficient, secure JavaScript/TypeScript package manager (prototype)"
repository = "https://github.com/infinitejs/pacm"
keywords = ["package-manager", "npm", "pnpm", "javascript", "node"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
camino = "1.1"
parking_lot = "0.12"
time = { version = "0.3", features = ["formatting"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
semver = "1.0"
flate2 = { version = "1.0" }
tar = "0.4"
base64 = "0.22"
once_cell = "1.19"
rand = "0.8"
dirs = "5.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
